# dnn

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
cmake/: clang_tidy_config.cmake  default_config.cmake  document_config.cmake  sanitizer_config.cmake
examples/: CMakeLists.txt  main.cpp
lib/dnn/: CMakeLists.txt  arrayref.h  context.cc  context.h  function.h  graph.cc  graph.h  name_manager.h  node.cc  node.h  tensor.cc  tensor.h  type.h  visitor.cc  visitor.h
lib/dnn/backend/: CMakeLists.txt  executor.h  generic.cc  generic.h  interface.h  macro.h  x86.cc  x86.h
lib/dnn/tensor/: CMakeLists.txt  tensor.cc  tensor.cpp  tensor.h  tensor_accessor.h  tensor_format.h  tensor_storage.h
lib/dnn/utils/: checking.h  logger.h  support.cc  support.h
tests/: CMakeLists.txt
